tests/semantic_errors/andrei11_3.tl
require "ifj21"

global name : function (integer) : string
function name    (a : integer) : integer end

function main()
end

main()
